<resources>
    <string name="app_name">NewsProjectKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_welcome">Welcome</string>
    <string name="business">Business</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="health">Health</string>
    <string name="general">General</string>
    <string name="entertainment">Entertainment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="not_registered">Not Registered?</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="sports">Sports</string>
    <string name="games">Games</string>
    <string name="please_verify_your_email">Please verify your email</string>
    <string name="verification_text">A verification link is sent to your email. Please click the verification link, and then you will be able to login.</string>
    <string name="i_understand_login_now">Back to the login screen</string>
    <string name="interests">Interests</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="search_here">Search Here</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="the_latest_news_for_your_interests">The Latest News For Your Interests</string>
    <string name="add_new_interests">Add New Interests!</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="sorry_we_couldn_t_find_any_results_for_your_search">Sorry. We couldn\'t find any results for your search.</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="delete_account">Delete Account</string>
</resources>