<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.profile.EditInterestsActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/WHITE">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_interests_toolbar"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_interests"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:padding="@dimen/_12sdp"
                    android:textColor="@color/BLACK">

                </TextView>

            </androidx.appcompat.widget.LinearLayoutCompat>



        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Interests which already chosen by you are checked."
        android:textSize="18sp"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/BLACK">


    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You can either add new interests or remove the existing interests just by clicking them!"
        android:textSize="18sp"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/BLACK">

    </TextView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_8sdp"
        app:chipSpacing="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/business"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/technology"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/science"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/sports"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/health"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/general"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/entertainment"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/cryptocurrency"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cryptocurrency">

        </com.google.android.material.chip.Chip>


        <com.google.android.material.chip.Chip
            android:id="@+id/games"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/reuters"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reuters.com">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/tech_crunch"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Techcrunch.com">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/cnn"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CNN">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/fox"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FOX">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/bbc_world"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BBC World">

        </com.google.android.material.chip.Chip>

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_interests_save_button"
        android:layout_width="108dp"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/custom_login_button"
        android:src="@drawable/next_icon"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/WHITE"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal">

    </androidx.appcompat.widget.AppCompatButton>

</androidx.appcompat.widget.LinearLayoutCompat>