<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.CreateAccountPart2Fragment">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="Let us know what you are interested in"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:chipSpacing="@dimen/_8sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/business"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/business">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/technology"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/science"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/sports"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/health"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/general"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/entertainment"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/cryptocurrency"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cryptocurrency">

        </com.google.android.material.chip.Chip>


        <com.google.android.material.chip.Chip
            android:id="@+id/games"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/games">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/reuters"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reuters.com">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/tech_crunch"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Techcrunch.com">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/cnn"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CNN">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/fox"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FOX">

        </com.google.android.material.chip.Chip>

        <com.google.android.material.chip.Chip
            android:id="@+id/bbc_world"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="BBC World">

        </com.google.android.material.chip.Chip>

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_account_done_button"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/custom_login_button"
        android:src="@drawable/next_icon"
        android:text="Done!"
        android:textAllCaps="false"
        android:textColor="@color/WHITE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chip_group">

    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="What are your favorite topics?"
        android:textColor="@color/BLACK"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/create_account_part2_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>